force-app/main/default/objects/Payment_Agents__c/Payment_Agents__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Payment Agents</label>
</CustomObject>