force-app/main/default/objects/Payment_Agents__c/fields/Available_Card_Types__c.field-meta.xml
<CustomField>
    <fullName>Available_Card_Types__c</fullName>
    <label>Available Card Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>