force-app/main/default/objects/Payment_Agents__c/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <label>Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>