force-app/main/default/objects/Payment_Agents__c/fields/Security_Key__c.field-meta.xml
<CustomField>
    <fullName>Security_Key__c</fullName>
    <label>Merchant Security Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>