force-app/main/default/objects/Payment_Agents__c/fields/Test_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Test_Endpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Endpoint</label>
    <type>Checkbox</type>
</CustomField>